complete invoice and receipt