@@ -3,8 +3,8 @@ package com.example.demo.services;
 import com.example.demo.dtos.PaymentFormDataDTO;
 import com.example.demo.dtos.PaymentRequestDTO;
 import com.example.demo.dtos.PaymentResponseDTO;
-import com.example.demo.repositories.PaymentRepository;
 import com.example.demo.dtos.PaymentStatusDTO;
+import com.example.demo.repositories.PaymentRepository;
 import com.example.demo.exceptions.PaymentValidationException;
 import com.example.demo.models.Payment;
 import com.example.demo.models.Student;
@@ -29,54 +29,49 @@ import java.util.stream.Collectors;
 @Transactional
 @RequiredArgsConstructor
 public class PaymentService {
+
     private final PaymentRepository paymentRepository;
     private final StudentRepository studentRepository;
+    private final SequenceService sequenceService;
 
-    private final List<String> NEPALI_MONTHS = List.of(
-            "Baishakh", "Jestha", "Ashadh", "Shrawan", "Bhadra", "Asoj",
-            "Kartik", "Mangsir", "Poush", "Magh", "Falgun", "Chaitra"
-    );
-
-    public PaymentResponseDTO createPayment(PaymentRequestDTO paymentRequest) {
-        // Validate student exists
-        Student student = studentRepository.findById(paymentRequest.getStudentId())
+    public PaymentResponseDTO createInvoice(PaymentRequestDTO req) {
+        Student student = studentRepository.findById(req.getStudentId())
                 .orElseThrow(() -> new PaymentValidationException("Student not found"));
 
-        // Validate admission fee payment
-        if (paymentRequest.getAdmissionFee() > 0) {
-            boolean hasPaidAdmission = paymentRepository.existsByStudentIdAndAdmissionFeePaid(student.getId());
-            if (hasPaidAdmission) {
-                throw new PaymentValidationException("Admission fee has already been paid for this student");
+        // Prevent duplicate admission fee invoice
+        if (req.getAdmissionFee() != null && req.getAdmissionFee() > 0) {
+            boolean admissionAlreadyInvoiced = paymentRepository.findByStudentIdOrderByPaymentDateDesc(student.getId())
+                    .stream()
+                    .anyMatch(Payment::getIsAdmissionPaid);
+            if (admissionAlreadyInvoiced) {
+                throw new PaymentValidationException("Admission fee already invoiced for this student");
             }
         }
 
-        // Validate monthly fee - check for duplicate months
-        if (paymentRequest.getMonthlyFee() > 0 || paymentRequest.getTransportFee() > 0) {
-            List<String> paidMonths = getPaidMonths(student.getId());
-            List<String> duplicateMonths = paymentRequest.getMonths().stream()
-                    .filter(paidMonths::contains)
-                    .collect(Collectors.toList());
-
-            if (!duplicateMonths.isEmpty()) {
-                throw new PaymentValidationException(
-                        "Fee already paid for months: " + String.join(", ", duplicateMonths));
-            }
+        // Prevent duplicate month invoices
+        List<String> paidMonths = paymentRepository.findAllByStudentId(student.getId())
+                .stream()
+                .flatMap(p -> p.getMonths().stream())
+                .toList();
+        List<String> duplicateMonths = req.getMonths().stream()
+                .filter(paidMonths::contains)
+                .collect(Collectors.toList());
+        if (!duplicateMonths.isEmpty()) {
+            throw new PaymentValidationException("Months already invoiced: " + String.join(", ", duplicateMonths));
         }
 
-        // Set calculated fields
-        paymentRequest.setPreviousDue(student.getPreviousDue());
-        calculatePaymentTotalsWithPartialPayment(paymentRequest);
+        Payment payment = convertToEntity(req, student);
+        payment.setInvoiceNo(sequenceService.generateInvoiceNo());
+        payment.setPreviousDue(student.getPreviousDue() == null ? 0.0 : student.getPreviousDue());
+        payment.calculateTotals();
 
-        // Create and save payment
-        Payment payment = convertToEntity(paymentRequest, student);
-        Payment savedPayment = paymentRepository.save(payment);
+        Payment saved = paymentRepository.save(payment);
 
-        // Update student's previous due
-        updateStudentPreviousDueWithPartialPayment(student, paymentRequest);
-
-        return convertToDTO(savedPayment);
+        // 🔹 Update student's previous due
+        double newDue = saved.getGrandTotal(); // Grand total = totalAmount + previousDue
+        student.setPreviousDue(newDue);
+        return convertToDTO(saved);
     }
-
 
     public Optional<PaymentResponseDTO> getPaymentById(Long id) {
         return paymentRepository.findByIdWithStudent(id)
@@ -90,19 +85,50 @@ public class PaymentService {
                 .collect(Collectors.toList());
     }
 
+    private PaymentResponseDTO convertToDTO(Payment p) {
+        PaymentResponseDTO dto = new PaymentResponseDTO();
+        dto.setId(p.getId());
+        dto.setInvoiceNo(p.getInvoiceNo());
+        dto.setStudentId(p.getStudent().getId());
+        dto.setStudentName(p.getStudent().getFullName());
+        dto.setStudentClass(p.getStudent().getStudentClass());
+        dto.setPaymentDate(p.getPaymentDate());
+        dto.setAdmissionFee(p.getAdmissionFee());
+        dto.setMonthlyFee(p.getMonthlyFee());
+        dto.setTransportFee(p.getTransportFee());
+        dto.setOthersFee(p.getOthersFee());
+        dto.setOthersNote(p.getOthersNote());
+        dto.setMonths(p.getMonths());
+        dto.setTotalAmount(p.getTotalAmount());
+        dto.setPreviousDue(p.getPreviousDue());
+        dto.setGrandTotal(p.getGrandTotal());
+        dto.setStatus(p.getStatus());
+        dto.setIsAdmissionPaid(p.getIsAdmissionPaid());
+        return dto;
+    }
+
+    private Payment convertToEntity(PaymentRequestDTO dto, Student student) {
+        Payment p = new Payment();
+        p.setStudent(student);
+        p.setPaymentDate(dto.getPaymentDate());
+        p.setAdmissionFee(dto.getAdmissionFee());
+        p.setMonthlyFee(dto.getMonthlyFee());
+        p.setTransportFee(dto.getTransportFee());
+        p.setOthersFee(dto.getOthersFee());
+        p.setOthersNote(dto.getOthersNote());
+        p.setMonths(dto.getMonths() == null ? List.of() : List.copyOf(dto.getMonths()));
+        return p;
+    }
+
     public PaymentStatusDTO getPaymentStatus(Long studentId) {
         Optional<Student> studentOpt = studentRepository.findById(studentId);
         if (studentOpt.isEmpty()) {
             throw new PaymentValidationException("Student not found");
         }
-
         Student student = studentOpt.get();
         boolean hasPaidAdmission = paymentRepository.existsByStudentIdAndAdmissionFeePaid(studentId);
         List<String> paidMonths = getPaidMonths(studentId);
-        List<String> availableMonths = NEPALI_MONTHS.stream()
-                .filter(month -> !paidMonths.contains(month))
-                .collect(Collectors.toList());
-
+        List<String> availableMonths = NEPALI_MONTHS.stream().filter(month -> !paidMonths.contains(month)).collect(Collectors.toList());
         return new PaymentStatusDTO(hasPaidAdmission, paidMonths, availableMonths, student.getPreviousDue());
     }
 
@@ -111,10 +137,8 @@ public class PaymentService {
         if (studentOpt.isEmpty()) {
             throw new PaymentValidationException("Student not found");
         }
-
         Student student = studentOpt.get();
         PaymentStatusDTO status = getPaymentStatus(studentId);
-
         PaymentFormDataDTO formData = new PaymentFormDataDTO();
         formData.setStudentId(studentId);
         formData.setStudentName(student.getFullName());
@@ -126,99 +150,30 @@ public class PaymentService {
         formData.setHasPaidAdmission(status.isHasPaidAdmission());
         formData.setAvailableMonths(status.getAvailableMonths());
         formData.setPaidMonths(status.getPaidMonths());
-
         return formData;
     }
 
-    // Helper method to get paid months from all payments
-    private List<String> getPaidMonths(Long studentId) {
+    List<String> getPaidMonths(Long studentId) {
         List<Payment> payments = paymentRepository.findAllByStudentId(studentId);
         List<String> allPaidMonths = new ArrayList<>();
-
         for (Payment payment : payments) {
             allPaidMonths.addAll(payment.getMonths());
         }
-
         return allPaidMonths;
     }
 
-    // Conversion methods
-    private PaymentResponseDTO convertToDTO(Payment payment) {
-        PaymentResponseDTO dto = new PaymentResponseDTO();
-        dto.setId(payment.getId());
-        dto.setStudentId(payment.getStudent().getId());
-        dto.setStudentName(payment.getStudent().getFullName());
-        dto.setStudentClass(payment.getStudent().getStudentClass());
-        dto.setPaymentDate(payment.getPaymentDate());
-        dto.setAdmissionFee(payment.getAdmissionFee());
-        dto.setMonthlyFee(payment.getMonthlyFee());
-        dto.setTransportFee(payment.getTransportFee());
-        dto.setOthersFee(payment.getOthersFee());
-        dto.setOthersNote(payment.getOthersNote());
-        dto.setMonths(payment.getMonths());
-        dto.setPreviousDue(payment.getPreviousDue());
-        dto.setTotalAmount(payment.getTotalAmount());
-        dto.setGrandTotal(payment.getGrandTotal());
-        dto.setIsAdmissionPaid(payment.getIsAdmissionPaid());
-        dto.setTotalPaidAmount(payment.getTotalPaidAmount());
-        return dto;
-    }
-
-    private Payment convertToEntity(PaymentRequestDTO dto, Student student) {
-        Payment payment = new Payment();
-        payment.setStudent(student);
-        payment.setPaymentDate(dto.getPaymentDate());
-        payment.setAdmissionFee(dto.getAdmissionFee());
-        payment.setMonthlyFee(dto.getMonthlyFee());
-        payment.setTransportFee(dto.getTransportFee());
-        payment.setOthersFee(dto.getOthersFee());
-        payment.setOthersNote(dto.getOthersNote());
-        payment.setMonths(new ArrayList<>(dto.getMonths()));
-        payment.setPreviousDue(dto.getPreviousDue());
-        payment.setTotalAmount(dto.getTotalAmount());
-        payment.setGrandTotal(dto.getGrandTotal());
-        payment.setIsAdmissionPaid(dto.getAdmissionFee() > 0);
-        payment.setTotalPaidAmount(dto.getTotalPaidAmount());
-        return payment;
-    }
-
-    private void calculatePaymentTotalsWithPartialPayment(PaymentRequestDTO paymentRequest) {
-        int monthsCount = paymentRequest.getMonths().size();
-        double monthlyTotal = paymentRequest.getMonthlyFee() * monthsCount;
-        double transportTotal = paymentRequest.getTransportFee() * monthsCount;
-
-        // Calculate total fees (without previous due)
-        double totalFees = paymentRequest.getAdmissionFee() + monthlyTotal + transportTotal + paymentRequest.getOthersFee();
-
-        double totalAmountDue = totalFees + paymentRequest.getPreviousDue();
-
-        // If paid amount is provided and less than total amount due, it's a partial payment
-        if (paymentRequest.getTotalPaidAmount() != null && paymentRequest.getTotalPaidAmount() > 0) {
-            if (paymentRequest.getTotalPaidAmount() > totalAmountDue) {
-                throw new PaymentValidationException("Paid amount cannot be greater than total amount due");
-            }
-            // This is a partial payment
-            paymentRequest.setTotalAmount(totalFees);
-            paymentRequest.setGrandTotal(paymentRequest.getTotalPaidAmount()); // Grand total becomes the actual paid amount
-        } else {
-            paymentRequest.setTotalAmount(totalFees);
-            paymentRequest.setGrandTotal(totalAmountDue);
-            paymentRequest.setTotalPaidAmount(totalAmountDue); // If no paid amount specified, assume full payment
-        }
-    }
-
-    private void updateStudentPreviousDueWithPartialPayment(Student student, PaymentRequestDTO paymentRequest) {
-        double totalAmountDue = paymentRequest.getTotalAmount() + paymentRequest.getPreviousDue();
-
-        double paidAmount = paymentRequest.getTotalPaidAmount();
-        if (paidAmount < totalAmountDue) {
-            // Partial payment - calculate remaining due
-            double remainingDue = totalAmountDue - paidAmount;
-            student.setPreviousDue(remainingDue);
-        } else {
-            // Full payment - no due remaining
-            student.setPreviousDue(0.0);
-        }
-        studentRepository.save(student);
-    }
+    private final List<String> NEPALI_MONTHS = List.of(
+            "Baishakh",
+            "Jestha",
+            "Ashadh",
+            "Shrawan",
+            "Bhadra",
+            "Asoj",
+            "Kartik",
+            "Mangsir",
+            "Poush",
+            "Magh",
+            "Falgun",
+            "Chaitra"
+    );
 }
